# svn-tui

./: Cargo.toml
src/: data_handler.rs  lister.rs  main.rs  ui.rs
