[package]
name = "svn-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
env_logger = "0.9"
log = "0.4"
tui = "0.19"
svn-cmd = { git = "https://github.com/rajputrajat/svn-cmd" }
tempfile = "3.3"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
